--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NotForgotAgain">
-        <activity android:name=".LoggedInHostActivity"></activity>
+        <activity android:name=".LoggedInHostActivity"/>
         <activity android:name=".LoggedOutHostActivity" />
         <activity
             android:name=".MainActivity"
