--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,13 @@ plugins {
     id 'kotlin-android-extensions'
     id 'androidx.navigation.safeargs'
     id 'kotlin-kapt'
+    id 'kotlinx-serialization'
+
 }
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.1"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.blogspot.soyamr.notforgotagain"
@@ -50,7 +52,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation "androidx.navigation:navigation-runtime-ktx:2.3.1"
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
@@ -59,6 +61,23 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.0-beta01"
     implementation 'com.airbnb.android:lottie:3.4.4'
     implementation 'com.google.dagger:dagger:2.13'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
+
+    // Kotlin Serialization
+    api "org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.0"
+    api "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.0"
+
+    // Retrofit
+    api 'com.squareup.retrofit2:retrofit:2.9.0'
+    api 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
+    api 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    // Glide
+    implementation('com.github.bumptech.glide:glide:4.11.0') {
+        transitive = false
+    }
+
     kapt 'com.google.dagger:dagger-compiler:2.13'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
