--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
+        android:name=".NoteApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_outline_edit_24"
         android:label="@string/app_name"
